# safe-pkgs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mkdocs.yml  zensical.toml
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: ai_missed_tool.md
.github/workflows/: ci.yml  coverage.yml  pages.yml  release-binaries.yml
crates/: README.md
crates/checks/: README.md
crates/checks/advisory/: Cargo.toml
crates/checks/advisory/src/: lib.rs
crates/checks/existence/: Cargo.toml
crates/checks/existence/src/: lib.rs
crates/checks/install-script/: Cargo.toml
crates/checks/install-script/src/: lib.rs
crates/checks/popularity/: Cargo.toml
crates/checks/popularity/src/: lib.rs
crates/checks/staleness/: Cargo.toml
crates/checks/staleness/src/: lib.rs
crates/checks/typosquat/: Cargo.toml
crates/checks/typosquat/src/: lib.rs
crates/checks/version-age/: Cargo.toml
crates/checks/version-age/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/osv/: Cargo.toml
crates/osv/src/: lib.rs
crates/registry/cargo/: Cargo.toml
crates/registry/cargo/src/: lib.rs  lockfile.rs  registry.rs
crates/registry/npm/: Cargo.toml
crates/registry/npm/src/: lib.rs  lockfile.rs  registry.rs
crates/registry/pypi/: Cargo.toml
crates/registry/pypi/src/: lib.rs  lockfile.rs  registry.rs
docs/: cache-deep-dive.md  check-support-map.md  configuration-spec.md  getting-started.md  index.md
docs/javascripts/: force-palette.js
docs/stylesheets/: extra.css
scripts/: build-skill-bundle-docker.ps1  build-skill-bundle-docker.sh
skills/safe-pkgs/: SKILL.md
src/: audit_log.rs  cache.rs  checks.rs  config.rs  custom_rules.rs  main.rs  metrics.rs  policy_snapshot.rs  service.rs  support_map.rs  types.rs
src/checks/: advisory.rs  advisory_tests.rs  existence.rs  existence_tests.rs  install_script.rs  install_script_tests.rs  mod.rs  mod_tests.rs  popularity.rs  popularity_tests.rs  staleness.rs  staleness_tests.rs  typosquat.rs  typosquat_tests.rs  version_age.rs  version_age_tests.rs
src/config/: custom_rules.rs  mod.rs  overlay.rs
src/mcp/: mod.rs  server.rs  server_tests.rs
src/registries/: cargo.rs  client.rs  mod.rs  mod_tests.rs  npm.rs  osv.rs
src/tests/: audit_log.rs  checks.rs  config.rs  policy_snapshot.rs  service.rs  support_map.rs
tests/: check_package_mock_http.rs  mcp_stdio.rs
