[package]
name = "safe-pkgs"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
thiserror = "2"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
wiremock = "0.6"
