[package]
name = "safe-pkgs-npm"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
safe-pkgs-core = { path = "../../core" }
safe-pkgs-osv = { path = "../../osv" }
safe-pkgs-registry-http = { path = "../../http" }

[dev-dependencies]
wiremock.workspace = true
