[package]
name = "safe-pkgs-pypi"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
safe-pkgs-core = { path = "../../core" }
safe-pkgs-osv = { path = "../../osv" }

[dev-dependencies]
wiremock.workspace = true
